# dokploy-ctl

./: Makefile  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-26-smart-deploy-polling.md
docs/superpowers/specs/: 2026-03-26-smart-deploy-polling.md
src/dokploy_ctl/: api_cmd.py  dokploy.py  logs.py  polling.py
src/dokployctl/: cli.py  env.py  find_cmd.py  hints.py  init_cmd.py  status.py
tests/: test_dokploy.py  test_env.py  test_find.py  test_hints.py  test_login.py  test_polling.py  test_status_v2.py
